added error handling config and project re-structured